--- a/sts04/pom.xml
+++ b/sts04/pom.xml
@@ -130,6 +130,14 @@
 		    <version>10.2.0.4.0</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-ibatis -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-ibatis</artifactId>
+		    <version>2.0.8</version>
+		</dependency>
+				
+		
 		
 	</dependencies>
     <build>
