--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ sts06/target/m2e-wtp/web-resources/META-INF/maven/com.bit/myapp06/pom.properties
 sts06/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 sts06/target/classes/mapper.xml
 sts06/target/classes/applicationContext.xml
+sts07/target/
