donelist : file upload/download // ver1 : resp set--> file name // ver2 : spring utils... and pathvariable

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ sts06/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 sts06/target/classes/mapper.xml
 sts06/target/classes/applicationContext.xml
 sts07/target/
+sts08/target/
